<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10px">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/T" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textSinger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/S" />

    <EditText
        android:id="@+id/editSinger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Singer"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Y" />

    <EditText
        android:id="@+id/editYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Year"
        android:inputType="number"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Rate" />

    <RadioGroup
        android:id="@+id/Ratings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1" />

        <RadioButton
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2" />

        <RadioButton
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3" />

        <RadioButton
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4" />

        <RadioButton
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnINSERT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10px"
            android:layout_marginLeft="10px"
            android:layout_marginEnd="10px"
            android:layout_marginRight="10px"
            android:layout_weight="1"
            android:text="@string/btnINT" />

        <Button
            android:id="@+id/btnSHOW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10px"
            android:layout_marginLeft="10px"
            android:layout_marginEnd="10px"
            android:layout_marginRight="10px"
            android:layout_weight="1"
            android:text="@string/btnSHOW" />
    </LinearLayout>
</LinearLayout>